added swamp bubble popper link

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ html, body {
 	<div class=content>
 		<p>Home page of Nuno Das Neves</p>
 		<p>
-			Some stuff that's on <a href="https://github.com/NunoDasNeves/">my Github</a>:
+			Some stuff I've made</a>:
 			<ul>
+			<li><a href="https://nunodasneves.itch.io/swamp-bubble-popper">Swamp Bubble Popper</a>: A game about popping bubbles. In a swamp.</li>
 			<li><a href="https://github.com/NunoDasNeves/sdl-game-starter">sdl game starter</a>: C/C++ platform layer for making games with SDL on Windows or Linux - based on code from <a href="https://handmadehero.org/faq">Handmade Hero</a></li>
 			<li><a href="https://github.com/NunoDasNeves/rigid-body-sim">rigid body sim</a>: 2D rigid body simulator made with <a href="https://github.com/NunoDasNeves/sdl-game-starter">sdl game starter</a> <br><img src="rigid-body-sim.gif"></li>
 			<li><a href="https://nunodasneves.github.io/interactive-algorithms/">interactive algorithms</a>: A visualization of <a href="https://en.wikipedia.org/wiki/Convolutional_code">convolutional codes</a> and the <a href="https://en.wikipedia.org/wiki/Viterbi_algorithm">Viterbi algorithm</a> (and Google <a href="https://en.wikipedia.org/wiki/PageRank">pagerank</a>, kinda)</li>
