--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ html, body {
 		<p>
 			Some stuff I've made</a>:
 			<ul>
+			<li><a href="https://nunodasneves.com/spite-and-malice-web">Spite and Malice</a>: A multiplayer browser-based version of the classic card game <a href="https://en.wikipedia.org/wiki/Spite_and_Malice">Spite and Malice</a></li>
 			<li><a href="https://nunodasneves.itch.io/swamp-bubble-popper">Swamp Bubble Popper</a>: A game about popping bubbles. In a swamp.</li>
 			<li><a href="https://github.com/NunoDasNeves/sdl-game-starter">sdl game starter</a>: C/C++ platform layer for making games with SDL on Windows or Linux - based on code from <a href="https://handmadehero.org/faq">Handmade Hero</a></li>
 			<li><a href="https://github.com/NunoDasNeves/rigid-body-sim">rigid body sim</a>: 2D rigid body simulator made with <a href="https://github.com/NunoDasNeves/sdl-game-starter">sdl game starter</a> <br><img src="rigid-body-sim.gif"></li>
