--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
 		}
 		@media (prefers-color-scheme: light) {
 			:root {
-
+				--color-bg: rgb(218, 218, 224);
+				--color-li-bg: rgb(236, 232, 230);
+				--color-font: rgb(31, 30, 30);
+				--color-tag: rgb(139, 139, 139);
+				--color-date: rgb(139, 139, 139);
+				--color-a:  rgb(60, 117, 223);
+				--color-a-visited: rgb(34, 66, 126);
+				--color-card-title: rgb(60, 117, 223);
 			}
 		}
 
@@ -101,11 +108,12 @@
 		.photo {
 		}
 		.actual-photo {
-			border-radius: 100%;
+			border-radius: 50%;
 			width: 100px;
 			height: 100px;
 			background-image: url("images/photo.jpg");
-			background-size: contain;
+			background-size: cover;
+			background-repeat: no-repeat;
 		}
 		.content {
 			margin: auto;
