round card edges and add little bit of content padding for smaller screens

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 		.content {
 			margin: auto;
 			max-width: fit-content;
+			padding: 0 10pt;
 		}
 		.projects-title {
 			padding: 10pt;
@@ -127,6 +128,7 @@
 			flex-direction: column;
 		}
 		.cards > div {
+			border-radius: 8px;
 			list-style:none;
 			margin-bottom: 20px;
 			padding: 15pt 25pt;
