Add bombsearcher card

--- a/index.html
+++ b/index.html
@@ -176,6 +176,17 @@
 		</div>
 		<div class=cards>
 				<div>
+					<p class=date>15 December 2022</p>
+					<h3><a target=_blank href="https://github.com/NunoDasNeves/bombsearcher">Bombsearcher</a></h3>
+					<div class=tags>C SDL OpenGL DearImgui stb</div>
+					<p>
+						A game about searching for bombs. <a target=_blank href="https://github.com/NunoDasNeves/bombsearcher/releases/tag/v1.0">Download for Windows or Linux</a>
+					</p>
+					<div class=card-images>
+						<video controls width=250><source src="videos/bombsearcher.mp4" type="video/mp4"></video>
+					</div>
+				</div>
+				<div>
 					<p class=date>18 November 2022</p>
 					<h3><a target=_blank href="https://www.lexaloffle.com/bbs/?pid=121011">Path of Agni</a></h3>
 					<div class=tags>pico-8 lua</div>
