add netherweird card

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		ul,li {
 			margin: 0;
 			padding: 0;
+			margin-left: 20px;
 		}
 		a {
 			color: var(--color-a);
@@ -176,6 +177,26 @@
 		</div>
 		<div class=cards>
 				<div>
+					<p class=date>March 2023</p>
+					<h3><a target=_blank href="https://nunodasneves.com/games/dreaminvaders/">Netherweird</a></h3>
+					<div class=tags>javascript</div>
+					<p>
+						An experimental tower defense / realtime strategy mashup. <a href="games/dreaminvaders/">Play it here</a><br>
+						Created in collaboration with Damian Maldonado.
+					</p>
+					<div class=card-images>
+						<video controls width=860><source src="videos/netherweird-video-720.mov" type="video/mp4"></video>
+					</div>
+					<p> Some tips:</p>
+					<ul>
+						<li>The goal is to destroy the enemy Tower while defending your own</li>
+						<li>Spend crystals to spawn units, which march down the bridges connecting your Tower to your enemy's</li>
+						<li>Aggressive tactics allow you to control the floating Dreamer in each lane to generate crystals more quickly</li>
+						<li>Capture souls (the floating balls) by destroying enemy units or damaging the enemy Tower</li>
+						<li>Spend souls to unlock stronger units, additional Dreamers, and static defense</li>
+					</ul>
+				</div>
+				<div>
 					<p class=date>15 December 2022</p>
 					<h3><a target=_blank href="https://github.com/NunoDasNeves/bombsearcher">Bombsearcher</a></h3>
 					<div class=tags>C SDL OpenGL DearImgui stb</div>
@@ -254,7 +275,6 @@
 						<a target=_blank href="https://en.wikipedia.org/wiki/PageRank">pagerank</a>, kinda)
 					</p>
 				</div>
-			</p>
 		</div>
 	</div>
 </body>
