Add webgame card, and little formatting adjustment

--- a/index.html
+++ b/index.html
@@ -181,13 +181,14 @@
 					<h3><a target=_blank href="https://nunodasneves.com/games/dreaminvaders/">Netherweird</a></h3>
 					<div class=tags>javascript</div>
 					<p>
-						An experimental tower defense / realtime strategy mashup. <a href="games/dreaminvaders/">Play it here</a><br>
-						Created in collaboration with Damian Maldonado.
+						An experimental tower defense / realtime strategy mashup.<br>
+						Created in collaboration with Damian Maldonado.<br>
+						<a href="games/dreaminvaders/">Play it here</a>
 					</p>
 					<div class=card-images>
 						<video controls width=860><source src="videos/netherweird-video-720.mov" type="video/mp4"></video>
 					</div>
-					<p> Some tips:</p>
+					<p>Some tips:</p>
 					<ul>
 						<li>The goal is to destroy the enemy Tower while defending your own</li>
 						<li>Spend crystals to spawn units, which march down the bridges connecting your Tower to your enemy's</li>
@@ -197,11 +198,33 @@
 					</ul>
 				</div>
 				<div>
+					<p class=date>15 November 2022</p>
+					<h3><a target=_blank href="https://nunodasneves.com/games/webgame/">Web Game</a></h3>
+					<div class=tags>javascript</div>
+					<p>
+						A platformer / roguelite about collecting food and outsmarting enemies.<br>
+						Created in roughly 2 days, in collaboration with <a href="http://fordacious.github.io/">Lachlan Ford</a>.<br>
+						<a href="games/webgame/">Play it here</a>
+						<div class=card-images>
+							<video controls width=860><source src="videos/webgame-video-480.mov" type="video/mp4"></video>
+						</div>
+						<p>How to play:</p>
+						<ul>
+							<li>You are the (small) yellow circle. Bring food (green circles) to grow your nest (large yellow circle).</li>
+							<li>Watch out for enemies (red circles). Once your nest is big enough, you win!</li>
+							<li>Move around the webs with WASD. Jump using spacebar.</li>
+							<li>Create new webs using left mouse click. Cut webs with R (very useful!)</li>
+							<li>Pick up and throw food (and small enemies!) with E.</li>
+						</ul>
+					</p>
+				</div>
+				<div>
 					<p class=date>15 December 2022</p>
 					<h3><a target=_blank href="https://github.com/NunoDasNeves/bombsearcher">Bombsearcher</a></h3>
 					<div class=tags>C SDL OpenGL DearImgui stb</div>
 					<p>
-						A game about searching for bombs. <a target=_blank href="https://github.com/NunoDasNeves/bombsearcher/releases/tag/v1.0">Download for Windows or Linux</a>
+						A game about searching for bombs.<br>
+						<a target=_blank href="https://github.com/NunoDasNeves/bombsearcher/releases/tag/v1.0">Download for Windows or Linux</a>
 					</p>
 					<div class=card-images>
 						<video controls width=250><source src="videos/bombsearcher.mp4" type="video/mp4"></video>
@@ -212,7 +235,8 @@
 					<h3><a target=_blank href="https://www.lexaloffle.com/bbs/?pid=121011">Path of Agni</a></h3>
 					<div class=tags>pico-8 lua</div>
 					<p>
-						A game about escaping a dungeon, one room at a time. <a target=_blank href="https://www.lexaloffle.com/bbs/?pid=121011">Play on lexaloffle.com</a>
+						A game about escaping a dungeon, one room at a time.<br>
+						<a target=_blank href="https://www.lexaloffle.com/bbs/?pid=121011">Play on lexaloffle.com</a>
 					</p>
 					<div class=card-images>
 						<img src="images/pathofagni_2.gif">
@@ -230,7 +254,8 @@
 					<h3><a target=_blank href="https://nunodasneves.itch.io/swamp-bubble-popper">Swamp Bubble Popper</a></h3>
 					<div class=tags>javascript</div>
 					<p>
-						A game about popping bubbles. In a swamp. <a target=_blank href="https://nunodasneves.itch.io/swamp-bubble-popper">Play on itch.io</a>
+						A game about popping bubbles. In a swamp.<br>
+						<a target=_blank href="https://nunodasneves.itch.io/swamp-bubble-popper">Play on itch.io</a>
 					</p>
 					<div class=card-images>
 						<img src="images/sbp.png">
