add div ids for # links

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 			<h2>Projects</h2>
 		</div>
 		<div class=cards>
-				<div>
+				<div id="netherweird">
 					<p class=date>March 2023</p>
 					<h3><a target=_blank href="https://nunodasneves.com/games/dreaminvaders/">Netherweird</a></h3>
 					<div class=tags>javascript</div>
@@ -197,7 +197,7 @@
 						<li>Spend souls to unlock stronger units, additional Dreamers, and static defense</li>
 					</ul>
 				</div>
-				<div>
+				<div id="webgame">
 					<p class=date>15 November 2022</p>
 					<h3><a target=_blank href="https://nunodasneves.com/games/webgame/">Web Game</a></h3>
 					<div class=tags>javascript</div>
@@ -218,7 +218,7 @@
 						</ul>
 					</p>
 				</div>
-				<div>
+				<div id="bombsearcher">
 					<p class=date>15 December 2022</p>
 					<h3><a target=_blank href="https://github.com/NunoDasNeves/bombsearcher">Bombsearcher</a></h3>
 					<div class=tags>C SDL OpenGL DearImgui stb</div>
@@ -230,7 +230,7 @@
 						<video controls width=250><source src="videos/bombsearcher.mp4" type="video/mp4"></video>
 					</div>
 				</div>
-				<div>
+				<div id="pathofagni">
 					<p class=date>18 November 2022</p>
 					<h3><a target=_blank href="https://www.lexaloffle.com/bbs/?pid=121011">Path of Agni</a></h3>
 					<div class=tags>pico-8 lua</div>
@@ -249,7 +249,7 @@
 					browser-based version of the classic card game <a
 						href="https://en.wikipedia.org/wiki/Spite_and_Malice">Spite and Malice</a>
 				</div-->
-				<div>
+				<div id="swampbubblepopper">
 					<p class=date>18 April 2021</p>
 					<h3><a target=_blank href="https://nunodasneves.itch.io/swamp-bubble-popper">Swamp Bubble Popper</a></h3>
 					<div class=tags>javascript</div>
@@ -261,7 +261,7 @@
 						<img src="images/sbp.png">
 					</div>
 				</div>
-				<div>
+				<div id="2drigidbodysimulator">
 					<p class=date>October 2020</p>
 					<h3><a target=_blank href="https://github.com/NunoDasNeves/rigid-body-sim">rigid body sim</a></h3>
 					<div class=tags>C/C++ opengl 2d</div>
