youtube embeds for netherweird and webgame

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 					<p>
 						An experimental tower defense / realtime strategy mashup.<br>
 						Created in collaboration with Damian Maldonado.<br>
-						<a href="games/dreaminvaders/">Play it here</a>
+						<a href="games/dreaminvaders/">Play here</a>
 					</p>
 					<div class=card-images>
-						<video controls width=860><source src="videos/netherweird-video-720.mov" type="video/mp4"></video>
+						<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JBcb0YNFs5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 					</div>
 					<p>Some tips:</p>
 					<ul>
@@ -204,9 +204,9 @@
 					<p>
 						A platformer / roguelite about collecting food and outsmarting enemies.<br>
 						Created in roughly 2 days, in collaboration with <a href="http://fordacious.github.io/">Lachlan Ford</a>.<br>
-						<a href="games/webgame/">Play it here</a>
+						<a href="games/webgame/">Play here</a>
 						<div class=card-images>
-							<video controls width=860><source src="videos/webgame-video-480.mov" type="video/mp4"></video>
+							<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/CMfStamd888" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						</div>
 						<p>How to play:</p>
 						<ul>
