add plantorium project

--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
 			<h2>Projects</h2>
 		</div>
 		<div class=cards>
+				<div id="plantorium">
+					<p class=date>November 2023</p>
+					<h3><a target=_blank href="https://nunodasneves.itch.io/plantorium">Plantorium</a></h3>
+					<div class=tags>Godot game engine</div>
+					<p>
+						A cozy plant-raising game. Made in 2 weeks for <a href="https://itch.io/jam/seattle-indies-slow-jam-2023">Seattle Indies Slow Jam 2023</a>.<br>
+						Created in collaboration with <a href="https://www.vrundatambe.com/">Vrunda Tambe</a> (art) and <a href="https://www.drrocketmusic.com/">Nick Carver</a> (music).<br>
+						<a href="https://nunodasneves.itch.io/plantorium">Play on itch.io</a>
+					</p>
+					<div class=card-images>
+						<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Vri0Thb5MV0" title="Plantorium Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					</div>
+				</div>
 				<div id="netherweird">
 					<p class=date>March 2023</p>
 					<h3><a target=_blank href="https://nunodasneves.com/games/dreaminvaders/">Netherweird</a></h3>
@@ -186,14 +199,14 @@
 						<a href="games/dreaminvaders/">Play here</a>
 					</p>
 					<div class=card-images>
-						<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JBcb0YNFs5g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JBcb0YNFs5g" title="Netherweird trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 					</div>
 					<p>Some tips:</p>
 					<ul>
 						<li>The goal is to destroy the enemy Tower while defending your own</li>
-						<li>Spend crystals to spawn units, which march down the bridges connecting your Tower to your enemy's</li>
-						<li>Aggressive tactics allow you to control the floating Dreamer in each lane to generate crystals more quickly</li>
-						<li>Capture souls (the floating balls) by destroying enemy units or damaging the enemy Tower</li>
+						<li>Spend yellow crystals to spawn units, which march down the bridges connecting your Tower to your enemy's</li>
+						<li>Wining a skirmish gives control of the floating Dreamer in the respective lane, which generates additional crystals</li>
+						<li>Capture souls (orbs) by destroying enemy units or damaging the enemy Tower</li>
 						<li>Spend souls to unlock stronger units, additional Dreamers, and static defense</li>
 					</ul>
 				</div>
