add dungeon wizard project. comment out some olds

--- a/index.html
+++ b/index.html
@@ -176,6 +176,22 @@
 			<h2>Projects</h2>
 		</div>
 		<div class=cards>
+				<div id="dungeonwizard">
+					<p class=date>March 2025</p>
+					<h3><a target=_blank href="https://nunodasneves.itch.io/dungeon-wizard">Dungeon Wizard</a></h3>
+					<div class=tags>Zig Raylib</div>
+					<p>
+						An "action roguelike deckbuilder". You play as a Wizard, fighting your way through a series of dungeon rooms, adding new spells to your deck along the way.<br>
+						Created in roughly 6 months, with additional sound design by Ethan Kelly.<br>
+						Download it on itch.io:<br>
+						<iframe frameborder="0" src="https://itch.io/embed/3345606?bg_color=080513&amp;fg_color=feffff&amp;link_color=45ef7c&amp;border_color=333333" width="552" height="167"><a href="https://nunodasneves.itch.io/dungeon-wizard">Dungeon Wizard by Nuno Das Neves</a></iframe>
+					</p>
+					<div class=card-images>
+						<img src="images/dungeon-wizard-gif-1.gif">
+						<img src="images/dungeon-wizard-gif-2.gif">
+						<img src="images/dungeon-wizard-gif-3.gif">
+					</div>
+				</div>
 				<div id="plantorium">
 					<p class=date>November 2023</p>
 					<h3><a target=_blank href="https://nunodasneves.itch.io/plantorium">Plantorium</a></h3>
@@ -252,6 +268,7 @@
 						<a target=_blank href="https://www.lexaloffle.com/bbs/?pid=121011">Play on lexaloffle.com</a>
 					</p>
 					<div class=card-images>
+						<img src="images/pathofagni_0.gif">
 						<img src="images/pathofagni_2.gif">
 						<img src="images/pathofagni_1.gif">
 					</div>
@@ -286,7 +303,7 @@
 						<img src="images/rigid-body-sim.gif">
 					</div>
 				</div>
-				<div>
+				<!--<div>
 					<p class=date>Jan 2020</p>
 					<h3><a target=_blank href="https://github.com/NunoDasNeves/sdl-game-starter">sdl game starter</a></h3>
 					<div class=tags>C/C++ SDL</div>
@@ -312,7 +329,7 @@
 						and the <a target=_blank href="https://en.wikipedia.org/wiki/Viterbi_algorithm">Viterbi algorithm</a> (and Google
 						<a target=_blank href="https://en.wikipedia.org/wiki/PageRank">pagerank</a>, kinda)
 					</p>
-				</div>
+				</div>-->
 		</div>
 	</div>
 </body>
